# sagesyn-studio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/canvas/: NodePalette.tsx  WorkflowCanvas.tsx
src/components/canvas/nodes/: AgentNode.tsx  EventNode.tsx  StateNode.tsx  ToolNode.tsx
src/lib/: sagGenerator.ts  sagParser.ts
src/views/: IDEView.tsx  RunnerView.tsx  SettingsView.tsx
