[package]
name = "sagesyn-studio"
version = "0.1.0"
description = "Visual IDE and runtime dashboard for the Sage Agent Programming Language"
authors = ["SageSyn <team@sagesyn.ai>"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
